#pragma once

//======================================================================================================================
namespace render_2d {
    //==================================================================================================================
    class Renderer {
    public:
        virtual ~Renderer();
    };
}
