@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
package framework {
    '===================================================================================================================
    abstract class Framework {
        + {abstract} createRenderer(render.RendererType) -> render.Renderer
    }
}

'=======================================================================================================================
package render {
    '===================================================================================================================
    enum RendererType {
        OpenGl
        Vulkan
        Direct3d
        Sdl
    }

    '===================================================================================================================
    abstract class Renderer {
        + {abstract} 2d() -> render_2d.Renderer&
        + {abstract} 3d() -> render_3d.Renderer&
    }

    '-------------------------------------------------------------------------------------------------------------------
    package render_2d {
        abstract class Renderer
    }

    '-------------------------------------------------------------------------------------------------------------------
    package render_3d {
        abstract class Renderer
    }

    '-------------------------------------------------------------------------------------------------------------------
    Renderer *-- render_2d.Renderer
    Renderer *-- render_3d.Renderer
}

'=======================================================================================================================
framework.Framework --> render.RendererType
framework.Framework --> render.Renderer : creates

'=======================================================================================================================
@enduml
